# numbuf

./: CMakeLists.txt  Format.md  README.md
cpp/: CMakeLists.txt
cpp/src/numbuf/: dict.cc  dict.h  metadata.cc  metadata.h  numbuf.cc  numbuf.h  tensor.cc  tensor.h  test.cc  types.cc  types.h
cpp/src/numbuf/util/: buffer.h  logging.h  utils.h
python/: CMakeLists.txt  setup.py
python/numbuf/: numbuf.cc  serialize.cc  serialize.h
python/numbuf/adapters/: numpy.cc
python/pynumbuf/: __init__.py  numbuf.h  serialize.py
python/pynumbuf/adapters/: numpy.h  python.cc  python.h
python/src/pynumbuf/: numbuf.cc  numbuf.h  serialize.cc  serialize.h
python/src/pynumbuf/adapters/: numbuf.cc  numbuf.h  numpy.cc  numpy.h  python.cc  python.h
src/: api.h  array.cc  array.h  dict.cc  dict.h  ether.cc  serialize.cc  sparse.cc
